# shortmantout

./: 540874.txt  540940.txt  Cargo.toml  LICENSE  joiners.asc  joiners.txt  overlap0.asc  overlap1.txt  overlap2.asc  overlap3.asc  overlap4.asc  overlap5.txt  reduced.asc
portmantouts/: dwrensha-537136.txt  dwrensha-537141.txt  dwrensha-537291.txt  dwrensha-537601.txt  dwrensha-537799.txt  dwrensha-538863.txt  dwrensha-539387.txt  dwrensha-539663.txt  dwrensha-540057.txt  dwrensha-540541.txt  dwrensha-540545.txt  dwrensha-540633.txt  dwrensha-540665.txt  ix-537803.txt  ix-dwrensha-537515.txt
src/: anneal.rs  generate.rs  join.rs  lib.rs  lower_bound.rs  normalize.rs  reduce.rs  search.rs  verify.rs
