[package]

name = "carrycoat"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@gmail.com>" ]
license = "MIT"
description = "trying to compute an optimal portmantout"

[dependencies]
radix_trie = "*"

[lib]

name = "carrycoat"
path = "src/lib.rs"

[[bin]]

name = "normalize"
path = "src/normalize.rs"

[[bin]]

name = "verify"
path = "src/verify.rs"

